# conways.place

./: .gitignore  Cargo.toml  Dockerfile-webapp  LICENSE.txt  docker-compose.yml  fwd-clightning.sh
conway/: Cargo.toml  glider.txt
conway/src/: lib.rs  main.rs  sim.rs  world.rs
nginx/: site.conf
static/: game.js  index.html  invoices.js  messages.js  render.js  style.css  templates.js
webapp/: Cargo.toml
webapp/src/: gameloop.rs  invoiceloop.rs  main.rs  messages.rs  payloop.rs  session.rs
webapp/static/: game.js  index.html  style.css
