[package]
name = "gameoflightinst"
version = "0.1.0"
authors = ["treyzania <treyzania@gmail.com>"]

[dependencies]
clap = "2.27.*"
conway = { path = "../conway" }
serde = "^1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-channel = "0.1"
tokio-timer = "^0.1"
futures = "0.1"

[dependencies.websocket]
version = "0.20.3"
#default-features = false
#features = ["sync"]

[[bin]]
name = "gameoflightinst"
path = "src/main.rs"
